@@ -1,0 +1,17 @@
+<jwc id="content">
+
+<table class="porlet.content">
+  <tr> <th>Headline</th> <th>Author</th> <th>Date</th>
+  <jwc id="e">
+     <jwc id="evenOdd">
+        <td>
+        <jwc id="link"><jwc id="insertHeadline"/></jwc>
+        </td>
+        <td><jwc id="insertAuthor"/></td>
+        <td><jwc id="insertDate"/></td>
+     </jwc>
+  </jwc>
+</table>
+
+</jwc>
+
